# translate-dataset

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  merge.py  mkdocs.yml  pyproject.toml  script_text_break.py  script_traducao.py
.github/workflow/: ci.yaml
.github/workflows/: main.yaml
docs/: index.md
docs/data_dictionaries/: README.md
docs/references/: README.md
notebooks/: README.md  primeira_linha.txt  train.ipynb
pipelines/: README.md
serve/: README.md
src/: __init__.py
src/models/: google_translate.py  m2m100.py  marian.py  mbart.py  nlbb.py  nllb.py  t5.py
src/utilities/: break_text.py  check_csv_restricoes.py  translate.py  translate_marian.py  translate_mbart.py  translate_nlbb.py
tests/: test_basic.py  test_break_text.py
