[tool.poetry]
name = "translate-dataset"
version = "0.1.0"
description = "Package for PT datasets translation using open source machine translation models."
authors = ["sildolfogomes <sildolfo.neto@eldorado.org.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
