[tool.poetry]
name = "translate-dataset"
version = "0.1.0"
description = "Package for PT datasets translation using open source machine translation models."
authors = ["sildolfogomes <sildolfo.neto@eldorado.org.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pip-audit = "^2.7.3"
taskipy = "^1.12.2"
mkdocs = "^1.6.0"
mkdocstrings-python = "^1.10.2"
pygments = "^2.18.0"
mkdocs-material = "^9.5.23"
pymdown-extensions = "^10.8.1"
pre-commit = "^3.7.1"
pytest = "^8.2.0"
google-cloud = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = "isort . && black ."
kill = "kill -9 $(lsof -t -i :8000)"
